--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /layout/simulacao/
 .idea/workspace.xml
 .idea/workspace.xml
+doc/Diagramas UWE de lógica de navegação e de Classe de Projeto.asta.lock
