--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /layout/material/
 /layout/simulacao/
-.idea/workspace.xml
-.idea/workspace.xml
 doc/Diagramas UWE de lógica de navegação e de Classe de Projeto.asta.lock
+
+src/database/BD_config\.php
